--- a/apps/docs/src/content/docs/python-sdk/async/async-lsp-server.mdx
+++ b/apps/docs/src/content/docs/python-sdk/async/async-lsp-server.mdx
@@ -25,7 +25,7 @@ Initializes a new LSP server instance.
 
 - `language_id` _LspLanguageId_ - The language server type (e.g., LspLanguageId.TYPESCRIPT).
 - `path_to_project` _str_ - Path to the project root directory. Relative paths are resolved
-  based on the sandbox workdir.
+  based on the sandbox working directory.
 - `toolbox_api` _ToolboxApi_ - API client for Sandbox operations.
 - `instance` _SandboxInstance_ - The Sandbox instance this server belongs to.
 
