--- a/apps/docs/src/content/docs/python-sdk/sync/process.mdx
+++ b/apps/docs/src/content/docs/python-sdk/sync/process.mdx
@@ -42,7 +42,7 @@ Execute a shell command in the Sandbox.
 
 - `command` _str_ - Shell command to execute.
 - `cwd` _Optional[str]_ - Working directory for command execution. If not
-  specified, uses the sandbox workdir.
+  specified, uses the sandbox working directory.
 - `env` _Optional[Dict[str, str]]_ - Environment variables to set for the command.
 - `timeout` _Optional[int]_ - Maximum time in seconds to wait for the command
   to complete. 0 means wait indefinitely.
