--- a/apps/docs/src/content/docs/typescript-sdk/git.mdx
+++ b/apps/docs/src/content/docs/typescript-sdk/git.mdx
@@ -39,7 +39,7 @@ running 'git add' on the command line.
 
 **Parameters**:
 
-- `path` _string_ - Path to the Git repository root. Relative paths are resolved based on the sandbox workdir.
+- `path` _string_ - Path to the Git repository root. Relative paths are resolved based on the sandbox working directory.
 - `files` _string\[\]_ - List of file paths or directories to stage, relative to the repository root
 
 
@@ -71,7 +71,7 @@ List branches in the repository.
 
 **Parameters**:
 
-- `path` _string_ - Path to the Git repository root. Relative paths are resolved based on the sandbox workdir.
+- `path` _string_ - Path to the Git repository root. Relative paths are resolved based on the sandbox working directory.
 
 
 **Returns**:
@@ -97,7 +97,7 @@ Checkout branche in the repository.
 
 **Parameters**:
 
-- `path` _string_ - Path to the Git repository root. Relative paths are resolved based on the sandbox workdir.
+- `path` _string_ - Path to the Git repository root. Relative paths are resolved based on the sandbox working directory.
 - `branch` _string_ - Name of the branch to checkout
 
 
@@ -132,7 +132,7 @@ repository if credentials are provided.
 **Parameters**:
 
 - `url` _string_ - Repository URL to clone from
-- `path` _string_ - Path where the repository should be cloned. Relative paths are resolved based on the sandbox workdir.
+- `path` _string_ - Path where the repository should be cloned. Relative paths are resolved based on the sandbox working directory.
 - `branch?` _string_ - Specific branch to clone. If not specified, clones the default branch
 - `commitId?` _string_ - Specific commit to clone. If specified, the repository will be left in a detached HEAD state at this commit
 - `username?` _string_ - Git username for authentication
@@ -189,7 +189,7 @@ Commits staged changes.
 
 **Parameters**:
 
-- `path` _string_ - Path to the Git repository root. Relative paths are resolved based on the sandbox workdir.
+- `path` _string_ - Path to the Git repository root. Relative paths are resolved based on the sandbox working directory.
 - `message` _string_ - Commit message describing the changes
 - `author` _string_ - Name of the commit author
 - `email` _string_ - Email address of the commit author
@@ -224,7 +224,7 @@ Create branche in the repository.
 
 **Parameters**:
 
-- `path` _string_ - Path to the Git repository root. Relative paths are resolved based on the sandbox workdir.
+- `path` _string_ - Path to the Git repository root. Relative paths are resolved based on the sandbox working directory.
 - `name` _string_ - Name of the new branch to create
 
 
@@ -250,7 +250,7 @@ Delete branche in the repository.
 
 **Parameters**:
 
-- `path` _string_ - Path to the Git repository root. Relative paths are resolved based on the sandbox workdir.
+- `path` _string_ - Path to the Git repository root. Relative paths are resolved based on the sandbox working directory.
 - `name` _string_ - Name of the branch to delete
 
 
@@ -279,7 +279,7 @@ Pulls changes from the remote repository.
 
 **Parameters**:
 
-- `path` _string_ - Path to the Git repository root. Relative paths are resolved based on the sandbox workdir.
+- `path` _string_ - Path to the Git repository root. Relative paths are resolved based on the sandbox working directory.
 - `username?` _string_ - Git username for authentication
 - `password?` _string_ - Git password or token for authentication
 
@@ -319,7 +319,7 @@ Push local changes to the remote repository.
 
 **Parameters**:
 
-- `path` _string_ - Path to the Git repository root. Relative paths are resolved based on the sandbox workdir.
+- `path` _string_ - Path to the Git repository root. Relative paths are resolved based on the sandbox working directory.
 - `username?` _string_ - Git username for authentication
 - `password?` _string_ - Git password or token for authentication
 
@@ -356,7 +356,7 @@ Gets the current status of the Git repository.
 
 **Parameters**:
 
-- `path` _string_ - Path to the Git repository root. Relative paths are resolved based on the sandbox workdir.
+- `path` _string_ - Path to the Git repository root. Relative paths are resolved based on the sandbox working directory.
 
 
 **Returns**:
