--- a/apps/docs/src/content/docs/typescript-sdk/lsp-server.mdx
+++ b/apps/docs/src/content/docs/typescript-sdk/lsp-server.mdx
@@ -118,7 +118,7 @@ will begin tracking the file's contents and providing language features.
 
 **Parameters**:
 
-- `path` _string_ - Path to the opened file. Relative paths are resolved based on the sandbox workdir.
+- `path` _string_ - Path to the opened file. Relative paths are resolved based on the sandbox working directory.
 
 
 **Returns**:
