--- a/apps/docs/src/content/docs/typescript-sdk/process.mdx
+++ b/apps/docs/src/content/docs/typescript-sdk/process.mdx
@@ -209,7 +209,7 @@ Executes a shell command in the Sandbox.
 **Parameters**:
 
 - `command` _string_ - Shell command to execute
-- `cwd?` _string_ - Working directory for command execution. If not specified, uses the sandbox workdir.
+- `cwd?` _string_ - Working directory for command execution. If not specified, uses the sandbox working directory.
 - `env?` _Record\<string, string\>_ - Environment variables to set for the command
 - `timeout?` _number_ - Maximum time in seconds to wait for the command to complete. 0 means wait indefinitely.
 
