--- a/apps/docs/src/content/docs/file-system-operations.mdx
+++ b/apps/docs/src/content/docs/file-system-operations.mdx
@@ -151,7 +151,9 @@ await sandbox.fs.uploadFiles(files)
 
 ### Downloading Files
 
-The following commands downloads the file `file1.txt` from the Sandbox user's root directory and prints out the content:
+#### Downloading a Single File
+
+The following commands downloads a single file `file1.txt` from the Sandbox user's root directory and prints out the content:
 
 <Tabs>
 <TabItem label="Python" icon="seti:python">
@@ -160,7 +162,7 @@ The following commands downloads the file `file1.txt` from the Sandbox user's ro
 content = sandbox.fs.download_file("file1.txt")
 
 with open("local_file.txt", "wb") as f:
-f.write(content)
+    f.write(content)
 
 print(content.decode('utf-8'))
 
@@ -175,6 +177,50 @@ console.log('File content:', downloadedFile.toString())
 
 ```
 
+</TabItem>
+</Tabs>
+
+#### Downloading Multiple Files
+
+The following example shows how to efficiently download multiple files with a single method call.
+
+<Tabs>
+<TabItem label="Python" icon="seti:python">
+```python
+# Download multiple files at once
+files_to_download = [
+    FileDownloadRequest(source="data/file1.txt"), # No destination - download to memory
+    FileDownloadRequest(source="data/file2.txt", destination="local_file2.txt"), # Download to local file
+]
+
+results = sandbox.fs.download_files(files_to_download)
+
+for result in results:
+    if result.error:
+        print(f"Error downloading {result.source}: {result.error}")
+    elif result.result:
+        print(f"Downloaded {result.source} to {result.result}")
+
+```
+</TabItem>
+<TabItem label="TypeScript" icon="seti:typescript">
+```typescript
+// Download multiple files at once
+const files = [
+    { source: "data/file1.txt" }, // No destination - download to memory
+    { source: "data/file2.txt", destination: "local_file2.txt" }, // Download to local file
+]
+
+const results = await sandbox.fs.downloadFiles(files)
+
+results.forEach(result => {
+    if (result.error) {
+        console.error(`Error downloading ${result.source}: ${result.error}`)
+    } else if (result.result) {
+        console.log(`Downloaded ${result.source} to ${result.result}`)
+    }
+})
+```
 </TabItem>
 </Tabs>
 
