--- a/examples/jupyter/daytona.ipynb
+++ b/examples/jupyter/daytona.ipynb
@@ -506,7 +506,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -520,7 +520,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.17"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
