chore: yarn docs after rebase
Signed-off-by: MDzaja <mirkodzaja0@gmail.com>

--- a/apps/docs/src/content/docs/typescript-sdk/git.mdx
+++ b/apps/docs/src/content/docs/typescript-sdk/git.mdx
@@ -220,7 +220,7 @@ await git.commit(
 createBranch(path: string, name: string): Promise<void>
 ```
 
-Create branche in the repository.
+Create branch in the repository.
 
 **Parameters**:
 
