--- a/apps/docs/src/content/docs/typescript-sdk/process.mdx
+++ b/apps/docs/src/content/docs/typescript-sdk/process.mdx
@@ -39,6 +39,7 @@ Handles process and code execution within a Sandbox.
 ```ts
 new Process(
    sandboxId: string, 
+   clientConfig: Configuration, 
    codeToolbox: SandboxCodeToolbox, 
    toolboxApi: ToolboxApi, 
    getRootDir: () => Promise<string>): Process
@@ -47,6 +48,7 @@ new Process(
 **Parameters**:
 
 - `sandboxId` _string_
+- `clientConfig` _Configuration_
 - `codeToolbox` _SandboxCodeToolbox_
 - `toolboxApi` _ToolboxApi_
 - `getRootDir` _\(\) =\> Promise\<string\>_
